[package]
name = "stargazer"
version = "1.0.0"
edition = "2021"


[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.1"
anyhow = "1.0.77"
dotenv = "0.15.0"
octocrab = "0.16.0"
reqwest = "0.11.23"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
